# DummyCryptoDevice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.md
src/: e_dummy.c
