CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
PROJECT(DummyCryptoDevice)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=C99")

FIND_PACKAGE(OpenSSL REQUIRED)

INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OPENSSL_LIBRARIES})

SET(SOURCE_FILES "src/e_dummy.c")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "lib/")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "lib/")
ADD_LIBRARY(dummy SHARED ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(dummy ${OPENSSL_LIBRARIES})